horizontal scroll on full screen fixed;

--- a/css/style.css
+++ b/css/style.css
@@ -41,5 +41,5 @@ hr{
 
 #headerback{
   background-color: #fff;
-  width:100vw;
+  width:100%;
 }
